--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,6 +3,10 @@
     list-style-type: none;
     min-width: 288px;
     margin-top: 0;
-    
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
     
 }
