--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,8 +2,7 @@
     background-image: url(../../../images/cover-trains.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    height: calc(100vw * 740 / 1184);
-    max-height: 740px;
+    min-height: calc(100vw * 740 / 1184);
     color: #fff;
     position: relative;
     text-decoration: none;
@@ -14,8 +13,6 @@
     opacity: 80%;
     z-index: 1;
     box-sizing: border-box;
-    
-   
 }
 
 .cover__overlay::before {
@@ -29,9 +26,15 @@
     background-color: #2A2C2F;
     z-index: -1;
     transition: 1s;
-
 }
 
 .cover__overlay:hover::before {
     opacity: 80%;
+}
+
+@media screen and (min-width: 1185px) {
+    .cover__overlay {
+    min-height: 740px;
+    
+}
 }
